[package]
name = "vjpyree-gpn22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["jpeg", "file_watcher"] }
bevy_rapier3d = "*"
bevy-inspector-egui = "*"
bevy_egui = "*"
egui_plot = "*"
strum_macros = "0.26.2"
strum = { version = "0.26.2" , features = ["strum_macros"]}
bevy_defer = "0.10.0"
bevy_rosc = "0.7.0"
rosc = "0.9.2"
futures = "0.3.30"
rand = "0.9.0-alpha.1"

[profile.dev.package."*"]
opt-level = 3
